update button spacing on forms, float btn no longer pushes margin on left and right, only right

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -315,7 +315,7 @@ This is for companys and contacts
 .float-btn {
   color: $cardinal;
   float: left;
-  margin: 0 1em;
+  margin: 0 .6em 0 0;
 }
 a.float-btn {
   color: $cardinal;
